# radcam-manager

./: .dockerignore  .gitignore  Cargo.toml  License  README.md  README_DEVS.md  build.sh  build_and_deploy_docker.sh  build_cross.sh  change_version.sh  dockerfile
.github/workflows/: deploy.yml  rust.yml
backend/: .gitignore
backend/bindings_generator/: Cargo.toml
backend/bindings_generator/src/: main.rs
backend/libs/autopilot/: Cargo.toml
backend/libs/autopilot/src/: api.rs  defaults.rs  mod.rs  parameters.rs  routes.rs  script.rs  settings.rs  settings_translations.rs
backend/libs/autopilot/src/manager/: calibration.rs  camera.rs  focus.rs  macros.rs  mod.rs  radcam.lua.template  script.rs  settings.rs  tilt.rs  zoom.rs
backend/libs/autopilot/src/mavlink/: connection.rs  mod.rs  parameters.rs
backend/libs/blueos_client/: Cargo.toml
backend/libs/blueos_client/src/: mod.rs
backend/libs/mcm_client/: Cargo.toml
backend/libs/mcm_client/src/: mcm_client.rs  mcm_types.rs  mod.rs
backend/libs/radcam_commands/: Cargo.toml
backend/libs/radcam_commands/src/: mod.rs
backend/libs/radcam_commands/src/protocol/: mod.rs
backend/libs/radcam_commands/src/protocol/display/: advanced_display.rs  base_display.rs  mod.rs
backend/libs/radcam_commands/src/protocol/video/: mod.rs  video_parameters.rs
backend/libs/radcam_manager/: Cargo.toml
backend/libs/radcam_manager/src/: logger.rs  mod.rs
backend/libs/radcam_manager/src/web/: mod.rs
backend/libs/radcam_manager/src/web/routes/: mod.rs
backend/libs/radcam_manager/src/web/routes/v1/: blueos.rs  cockpit.rs  info.rs  log.rs  mod.rs
backend/libs/radcam_manager/src/web/routes/v1/camera/: mod.rs
backend/libs/settings/: Cargo.toml
backend/libs/settings/src/: manager.rs  mod.rs  v0.rs  v1.rs
backend/libs/utils/: Cargo.toml
backend/libs/utils/src/: mod.rs
backend/libs/web_client/: Cargo.toml
backend/libs/web_client/src/: mod.rs
frontend/: .gitignore  components.d.ts  index.html  make_ico.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.mjs  vite.config.mjs.map  vite.config.mjs.timestamp-1736518448271-162d196961cd5.mjs  vite.config.mts
frontend/src/: App.vue  main.ts
frontend/src/bindings/: camera.d.ts
frontend/src/components/: BasicSettings.vue  BlueButtonGroup.vue  BlueSelect.vue  BlueSlider.vue  BlueSwitch.vue  ExpansibleOptions.vue  ExpansiblePanel.vue  ImageTab.vue  Loading.vue  Slider.vue  StreamsTab.vue
frontend/src/components/common/: OperationError.vue  SpinningLogo.vue
frontend/src/router/: index.ts
frontend/src/styles/: global.css
frontend/src/utils/: enumUtils.ts  jsonUtils.ts
frontend/src/views/: HomeView.vue
