[workspace]
members = [
    "backend/libs/mcm_client",
    "backend/libs/radcam_commands",
    "backend/libs/radcam_manager",
    "backend/libs/utils",
    "backend/libs/web_client",
    "backend/bin",
    "backend/bindings_generator"
]
resolver = "2"

[profile.release]
strip = true

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
panic = 'abort'
codegen-units = 1
