[workspace]
members = [
    "backend/libs/autopilot",
    "backend/libs/mcm_client",
    "backend/libs/radcam_commands",
    "backend/libs/radcam_manager",
    "backend/libs/settings",
    "backend/libs/utils",
    "backend/libs/web_client",
    "backend/bin",
    "backend/bindings_generator",
]

[workspace.package]
version = "0.2.0-beta.1"
edition = "2024"
license = "MIT"
authors = ["João Antônio Cardoso"]
homepage = "https://github.com/bluerobotics/radcam-manager"

[profile.release]
strip = true

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
panic = 'abort'
codegen-units = 1
