[workspace]
members = [
    "backend/libs/autopilot",
    "backend/libs/blueos_client",
    "backend/libs/mcm_client",
    "backend/libs/radcam_commands",
    "backend/libs/radcam_manager",
    "backend/libs/settings",
    "backend/libs/utils",
    "backend/libs/web_client",
    "backend/bin",
    "backend/bindings_generator",
]
resolver = "3"

[workspace.package]
version = "0.2.0-beta.6"
edition = "2024"
license = "MIT"
authors = ["João Antônio Cardoso"]
homepage = "https://github.com/bluerobotics/radcam-manager"

[workspace.dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.40", default-features = false, features = ["clock"]}
futures = "0.3.31"
indexmap = { version = "2.10.0", features = ["serde"] }
once_cell = "1.21.3"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["rc"] }
serde_derive = "1.0.219"
serde_repr = "0.1.20"
serde_json = "1.0.141"
tokio = { version = "1.47.0", default-features = false }
tokio-stream = { version = "0.1.17", default-features = false, features = ["fs"] }
tower-http = { version = "0.6", features = ["normalize-path", "trace", "cors"] }
tracing = { version = "0.1.41", features = ["log", "async-await"] }
ts-rs = { version = "11.0.1", features = ["serde_json", "no-serde-warnings", "indexmap-impl", "url-impl", "uuid-impl"] }
tsync = { git = "https://github.com/AnthonyMichaelTDM/tsync.git", rev = "01f56be" }
url = { version = "2.5.4", features = ["serde"] }
url_params_serializer = "0.1.1"
uuid = { version = "1.17.0", features = ["v5", "serde"] }
reqwest = { version = "0.12.22", default-features = false, features = ["http2", "json", "rustls-tls"] }
regex = { version = "1.11.1", default-features = false, features = ["std"] }

[profile.release]
strip = true

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
panic = 'abort'
codegen-units = 1
