[package]
name = "bindings"
version = "0.1.4"
edition = "2024"

[[bin]]
name = "bindings"
path = "src/main.rs"
bench = false

[dependencies]
autopilot = { path="../libs/autopilot" }
radcam_commands = { path="../libs/radcam_commands" }
mcm_client = { path = "../libs/mcm_client" }

anyhow = "1.0.98"
ts-rs = { version = "10.1.0", features = ["serde_json", "no-serde-warnings"] }
tsync = { git = "https://github.com/AnthonyMichaelTDM/tsync.git", rev = "01f56be" }
regex = { version = "1.11.1", default-features = false, features = ["std"] }
