[package]
name = "bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true

[[bin]]
name = "bindings"
path = "src/main.rs"
bench = false

[dependencies]
autopilot = { path="../libs/autopilot" }
radcam_commands = { path="../libs/radcam_commands" }
mcm_client = { path = "../libs/mcm_client" }

anyhow = { workspace = true }
ts-rs = { workspace = true }
tsync = { workspace = true }
regex = { workspace = true }
