[package]
name = "blueos_client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
name = "blueos_client"
path = "src/mod.rs"
bench = false

[dependencies]
web_client = { path = "../web_client" }

anyhow = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time", "fs", "io-util", "macros"] }
tracing = { workspace = true }
