[package]
name = "mcm_client"
version = "0.1.3"
edition = "2024"

[lib]
name = "mcm_client"
path = "src/mod.rs"
bench = false

[dependencies]
web_client = { path = "../web_client" }

anyhow = "1.0.98"
indexmap = { version = "2.9.0", features = ["serde"] }
once_cell = "1.21.3"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["rc"] }
serde_derive = "1.0.219"
serde_repr = "0.1.20"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
ts-rs = { version = "10.1.0", features = ["serde_json", "no-serde-warnings", "indexmap-impl", "url-impl", "uuid-impl"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v5", "serde"] }
