[package]
name = "mcm_client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
name = "mcm_client"
path = "src/mod.rs"
bench = false

[dependencies]
web_client = { path = "../web_client" }

anyhow = { workspace = true }
indexmap = { workspace = true }
once_cell = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_repr = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
ts-rs = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
