[package]
name = "radcam_commands"
version = "0.1.0"
edition = "2021"

[lib]
name = "radcam_commands"
path = "src/mod.rs"
bench = false

[dependencies]
web_client = { path = "../web_client" }
mcm_client = { path = "../mcm_client" }
utils = { path = "../utils" }

anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["ws"] }
base16ct = { version = "0.2.0", features = ["alloc"] }
md-5 = "0.10.6"
reqwest = { version = "0.12.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = "1.0.217"
serde_derive = "1.0.217"
serde_repr = "0.1.19"
serde_json = "1.0.135"
serde_with = "3.12.0"
tracing = "0.1.41"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.11.1", features = ["v5", "serde"] }
ts-rs = { version = "10.1.0", features = ["serde_json", "no-serde-warnings"] }