[package]
name = "radcam_commands"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
name = "radcam_commands"
path = "src/mod.rs"
bench = false

[dependencies]
web_client = { path = "../web_client" }
mcm_client = { path = "../mcm_client" }
utils = { path = "../utils" }

anyhow = { workspace = true }
axum = { version = "0.8.3", features = ["ws"] }
base16ct = { version = "0.2.0", features = ["alloc"] }
md-5 = "0.10.6"
reqwest = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_repr = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.12.0"
tracing = { workspace = true }
tokio = { workspace = true, features = ["time"] }
url = { workspace = true }
uuid = { workspace = true }
ts-rs = { workspace = true }
tsync = { workspace = true }