[package]
name = "radcam_manager"
version = "0.1.2"
edition = "2024"

[lib]
name = "radcam_manager"
path = "src/mod.rs"
bench = false

[dependencies]
web_client = { path = "../web_client" }
mcm_client = { path = "../mcm_client" }
radcam_commands = { path = "../radcam_commands" }

anyhow = "1.0.98"
axum = { version = "0.8.3", features = ["ws"] }
base16ct = { version = "0.2.0", features = ["alloc"] }
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
include_dir = "0.7.4"
indexmap = { version = "2.9.0", features = ["serde"] }
md-5 = "0.10.6"
mime_guess = "2.0.5"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["http2", "json", "rustls-tls"] }
ringbuffer = "0.15.0"
semver = "1.0.26"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_repr = "0.1.20"
serde_json = "1.0.140"
serde_with = "3.12.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
tower = { version = "0.5.2" }
tower-http = { version = "0.6", features = ["normalize-path", "trace", "cors"] }
tracing = { version = "0.1.41", features = ["log", "async-await"] }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
url_params_serializer = "0.1.1"
uuid = { version = "1.16.0", features = ["v5", "serde"] }
ts-rs = { version = "10.1.0", features = ["serde_json", "no-serde-warnings"] }
tsync = { git = "https://github.com/AnthonyMichaelTDM/tsync.git", rev = "01f56be" }