[package]
name = "radcam_manager"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
name = "radcam_manager"
path = "src/mod.rs"
bench = false

[dependencies]
autopilot = { path = "../autopilot" }
web_client = { path = "../web_client" }
mcm_client = { path = "../mcm_client" }
radcam_commands = { path = "../radcam_commands" }

anyhow = { workspace = true }
axum = { version = "0.8.3", features = ["ws"] }
base16ct = { version = "0.2.0", features = ["alloc"] }
chrono = { workspace = true, features = ["serde", "clock"] }
futures = { workspace = true }
include_dir = "0.7.4"
indexmap = { workspace = true }
md-5 = "0.10.6"
mime_guess = "2.0.5"
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
ringbuffer = "0.15.0"
semver = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_repr = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.12.0"
thiserror = "2.0.12"
tokio = { workspace = true, features = ["full"] }
toml = "0.8.20"
tower = { version = "0.5.2" }
tower-http = { workspace = true }
tracing = { version = "0.1.41", features = ["log", "async-await"] }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { workspace = true }
url_params_serializer = { workspace = true }
uuid = { workspace = true }
ts-rs = { workspace = true }
tsync = { workspace = true }