[package]
name = "settings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
name = "settings"
path = "src/mod.rs"
bench = false

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
futures = "0.3.31"
indexmap = { version = "2.9.0", features = ["serde"] }
once_cell = "1.21.3"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", default-features = false, features = ["time", "fs", "io-util", "macros"] }
tokio-stream = { version = "0.1.17", default-features = false, features = ["fs"] }
tower-http = { version = "0.6", features = ["normalize-path", "trace", "cors"] }
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["v5", "serde"] }

[dev-dependencies]
tempfile = "3.20.0"