[package]
name = "settings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
name = "settings"
path = "src/mod.rs"
bench = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time", "fs", "io-util", "macros"] }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.20.0"