[package]
name = "utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
name = "utils"
path = "src/mod.rs"
bench = false

[dependencies]
anyhow = "1.0.98"
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"