[package]
name = "web_client"
version = "0.1.2"
edition = "2024"

[lib]
name = "web_client"
path = "src/mod.rs"
bench = false

[dependencies]
anyhow = "1.0.98"
reqwest = { version = "0.12.15", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"
url = "2.5.4"
url_params_serializer = "0.1.1"