[package]
name = "web_client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
name = "web_client"
path = "src/mod.rs"
bench = false

[dependencies]
anyhow = "1.0.98"
reqwest = { version = "0.12.15", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"
url = "2.5.4"
url_params_serializer = "0.1.1"